--- a/etc.css
+++ b/etc.css
@@ -17,6 +17,11 @@ body{
 div{
     box-sizing: border-box !important;
 }
+li{
+    list-style: none;
+}
+
+
 .BUTbn{
     border:none;
 }
@@ -42,6 +47,9 @@ div{
 }
 .MG0{
     margin: 0;
+}
+.positionrelative{
+    position: relative;
 }
 
 
@@ -83,22 +91,25 @@ div{
 .menucontainer{
     margin-top: 3%;
     width: 100%;
-    height: auto;
+    height: 50px;
     padding-left: 5%;
 }
 .menubutton{
     width: auto;
     height: 40px;
     border-radius: 10px;
+    font-weight: bold;
+    font-size: medium;
 }
 .workscontainer{
     width: 100px;
     height: auto;
+    padding-left: 15px;
     margin-top: 2%;
     border-radius: 10px;
-    position: relative;
     background-color: aqua;
 }
+
 
 .textcontainer{
     margin-top: 3%;
